--- a/style.css
+++ b/style.css
@@ -219,9 +219,10 @@
     #s1 {
         background: #E30512;
     }
+
     
     .logo {
-        position: absolute;
+        position: fixed;
         top: 20px;
         left: 20px;
         width: 260px;
@@ -293,14 +294,16 @@
         display: flex;
         gap: 5px;
         font-weight: bold;
-        font-size: 15px;
+        font-size: 12px;
         line-height: 22px;
     
     }
     
     .selectedStores a {
         text-decoration: none;
+        font-size: 12px;
     }
+
     
     .issue-1-decoration {
         color: #e568ac;
